# Graphs

./: .gitignore  README.md  arch.drawio
graph-app/: CmakeLists.txt  README.md  conanfile.txt  setup-projects.sh
graph-app/data/: list_graph.json  matrix_graph.json
graph-app/include/api/: GraphAPI.hpp  README.md
graph-app/include/graph_core/: Graph.hpp  GraphGenerator.hpp  GraphStorage.hpp  algorithms.hpp  doc.md
graph-app/include/graph_repository/: GraphRepository.hpp
graph-app/src/: main.cpp
graph-app/src/api/: CmakeLists.txt  GraphAPI.cpp  main.cpp
graph-app/src/graph_core/: CmakeLists.txt  Graph.cpp
graph-app/tests/: CMakeLists.txt  algorithm_tests.cpp  graph_tests.cpp
